--- a/CompanyWebCore/.vscode/tasks.json
+++ b/CompanyWebCore/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\CompanyWebCore.csproj"
+                "${workspaceRoot}\\CompanyWebCore\\CompanyWebCore.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
