--- a/CompanyCore/CompanyCore.Web/src/package.json
+++ b/CompanyCore/CompanyCore.Web/src/package.json
@@ -9,6 +9,15 @@
   "author": "rexyang",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.0"
+  },
+  "devDependencies": {
+    "gulp-clean": "^0.3.2",
+    "gulp-notify": "^3.0.0",
+    "gulp-sync": "^0.1.4",
+    "less-plugin-autoprefix": "^1.5.1",
+    "require-dir": "^0.3.1",
+    "webpack": "^2.4.1"
   }
 }
