--- a/CompanyCore/CompanyCore.Web/appsettings.json
+++ b/CompanyCore/CompanyCore.Web/appsettings.json
@@ -15,6 +15,9 @@
     "WebSocketConfig": {
       "Separator": "<custom_separator>",
       "MaxLenth": 4096
+    },
+    "BaseConfig": {
+      "DbConectionString": "Database=company;Data Source=192.168.26.137;Port=3306;User=root;Password=123456;CharSet=utf8;Allow User Variables=True; "
     }
   }
 }
