--- a/CompanyCore/CompanyCore.Web/webfront/package.json
+++ b/CompanyCore/CompanyCore.Web/webfront/package.json
@@ -4,15 +4,25 @@
   "description": "",
   "main": "gulp.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test1": "echo test1",
+    "babel": "babel src -d babeldist"
   },
   "author": "rexyang",
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-less": "^3.3.0"
+    "gulp-less": "^3.3.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "gulp-clean": "^0.3.2",
     "gulp-notify": "^3.0.0",
     "gulp-sync": "^0.1.4",
@@ -20,7 +30,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "require-dir": "^0.3.1",
     "vinyl-named": "^1.1.0",
-    "webpack": "^2.4.1",
+    "webpack": "^2.5.0",
     "webpack-stream": "^3.2.0"
   }
 }
